src/components/structures/Page/page.module.css
.root {
  --z-index-stack-1: 1;
  --z-index-stack-2: 101;

  position: relative;
  min-height: 100vh;
}

.main {
  width: 100%;
}

.is-centered {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.with-top-nav-fixed {
  min-height: 100vh;
}

.container {
  display: flex;
}

.side-nav {
  z-index: var(--z-index-stack-1);
  width: var(--ye-layout-side-nav-width);
  max-width: 100%;
  height: 100vh;
  transition: width ease-in-out 0.5s;

  &.top-nav-top {
    top: 4.5rem;
    height: calc(100vh - 4.5rem);
  }

  @media (--media-max-lg) {
    position: fixed;
    left: -2px;
    z-index: var(--z-index-stack-2);
    width: var(--ye-layout-side-nav-toggle-width);
  }

  @media (--media-min-xl) {
    &.is-sticky {
      position: sticky;
      top: 0;
    }
  }

  @media screen and (prefers-reduced-motion: reduce) {
    transition: none;
  }
}

.side-nav-backdrop {
  position: fixed;
  top: 0;
  right: 100%;
  bottom: 0;
  left: 0;
  display: block;
  background: var(--ye-color-black-50);
}

.side-nav-toggle {
  width: var(--ye-layout-side-nav-toggle-width);

  @media (--media-max-md) {
    width: var(--ye-layout-side-nav-width);

    & .side-nav-backdrop {
      right: 0;
    }
  }
}

.is-fixed {
  position: fixed;
  top: 0;
  left: 0;
  z-index: var(--z-index-stack-2);
  width: 100%;
  transition: all ease-in-out 0.5s;
  transition-property: width, left;

  &.side-nav-top {
    @media (--media-min-lg) {
      left: var(--ye-layout-side-nav-width);
      width: calc(100% - var(--ye-layout-side-nav-width));

      &.has-side-nav-toggle {
        left: var(--ye-layout-side-nav-toggle-width);
        width: calc(100% - var(--ye-layout-side-nav-toggle-width));
      }
    }
  }

  @media screen and (prefers-reduced-motion: reduce) {
    transition: none;
  }
}

.content {
  flex: 1;
  min-width: 0;
}

.spacer {
  position: absolute;
  top: 0;
  z-index: -1;
  width: 100%;
  height: 0;
}

